--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="/src/assets/facebook-svgrepo-com.svg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fackbuck</title>
+    <title>Fakebuck</title>
   </head>
   <body>
     <div id="root"></div>
